# FlowSec

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: public.yml  publish.yml
docs/: FULL_README.md
src/pipelineguard/: ai_narrative.py  cli.py  config.py  parser.py  report.py  scanner.py
src/pipelineguard/rules/: artifact_signing.py  base.py  container_runs_as_root.py  dependency_pinning.py  env_vars_in_logs.py  excessive_permissions.py  hardcoded_secrets.py  insecure_curl.py  missing_branch_protection.py  missing_env_protection.py  missing_oidc.py  missing_timeout.py  pull_request_target.py  secrets_in_build_args.py  secrets_in_run.py  self_hosted_runner.py  unpinned_actions.py  workflow_dispatch_injection.py
tests/fixtures/: sample_azure_vulnerable.yml  sample_gitlab_vulnerable.yml  sample_workflow_vulnerable.yml
