[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pipelineguard"
version = "0.1.0"
description = "CI/CD pipeline security analyzer — scans GitHub Actions, GitLab CI, and Jenkins configs for attack vectors"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["security", "devsecops", "cicd", "github-actions", "sast"]
dependencies = [
    "PyGithub>=2.1.1",
    "python-gitlab>=4.4.0",
    "httpx>=0.27.0",
    "PyYAML>=6.0.1",
    "jsonpath-ng>=1.6.1",
    "rich>=13.7.0",
    "anthropic>=0.28.0",
    "jinja2>=3.1.4",
    "Pygments>=2.18.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "responses>=0.25.3",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
    "bandit>=1.7.8",
    "pre-commit>=3.7.1",
    "hatch>=1.12.0",
]

[project.scripts]
pipelineguard = "pipelineguard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pipelineguard"]

[tool.ruff]
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=pipelineguard --cov-report=term-missing"

[tool.coverage.run]
source = ["src/pipelineguard"]
